# micro-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  persona.md  pyproject.toml  schedule.example  settings.yaml  start.cmd  start.sh
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  config.py  context.py  display.py  factory.py  mcp.py  model.py  registry.py  server.py  store.py
agent/console/: display.py  menu.py
agent/engine/: factory.py  mcp.py  model.py  registry.py  runner.py
agent/runtime/: approvals.py  context.py  updates.py
agent/server/: __init__.py  server.py
agent/tools/: builtins.py  planning.py  selfimprove.py  toolkit.py
docs/: index.html
examples/mcp_demo/: echo_server.py
examples/rss_research/: README.md  brief.py  persona.md  settings.yaml
examples/rss_research/tools/: rss_fetch.py
scripts/: fleet.sh  install.ps1  install.sh  new.ps1  new.sh  run.ps1  run.sh
tests/: test_caching.py  test_config.py  test_isolation.py  test_memory.py  test_model.py  test_planning.py  test_registry.py  test_security.py  test_selfimprove.py  test_server.py  test_server_auth.py  test_store.py  test_tool_quality.py  test_updates.py
tools/: _example.py
