[project]
name = "genesis-agent"
version = "0.6.0"
description = "Lightweight modular vertical-agent template on Pydantic AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[openai,anthropic]>=1.0,<2",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Opt-in: external MCP tool servers. Install with:  uv sync --extra mcp
mcp = ["mcp>=1.0"]
# Opt-in: Logfire tracing (set LOGFIRE_TOKEN in .env). Install with:  uv sync --extra obs
obs = ["logfire>=3.0"]
# Opt-in: eval harness for your vertical. Install with:  uv sync --extra evals
evals = ["pydantic-evals>=1.0"]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
agent = "agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
package = true
